# mcp-beancount

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: beanquery-cheatsheet.md
src/mcp_beancount/: __init__.py  config.py  exceptions.py  ledger.py  locking.py  nl.py  schemas.py  server.py  utils.py
tests/: conftest.py  test_ledger_fixture.py  test_ledger_manager.py  test_server.py  test_server_placeholders.py
tests/fixtures/: example.beancount  mcp-beancount.toml
