[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-beancount"
version = "0.1.0"
description = "MCP server tools for Beancount 3.2.0: accounts, balances, transactions, and BeanQuery-backed Q&A."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "beancount==3.2.0",
  "beanquery==0.2.0",
  "fastmcp>=2.12.4",
  "mcp[cli]>=1.10.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
]

[project.scripts]
mcp-beancount = "mcp_beancount.server:main"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
